sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:3: error: not found: type int
	var v:int = 0
              ^DutchFlagAlgo:7: error: value += is not a member of Int
      i+= -1;
       ^