sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
	var v:int = 0
  for(i <- 1 to getTaille()-1){
    v=i;
    while(getCouleur(i)>v && i>0){
      i+= -1;
    }
    echange(i,v)   
  }
}